--- a/todo_frontend/todolist/src/app/components/category-dropdown/category-dropdown.component.html
+++ b/todo_frontend/todolist/src/app/components/category-dropdown/category-dropdown.component.html
@@ -4,6 +4,7 @@
       <h5 class="mb-0">{{ category.name }}</h5>
       <small class="text-muted">{{ category.description }}</small>
     </div>
+    <button type="button" (click)="deleteCategory(category.id)" class="btn btn-sm btn-danger ms-auto me-2 "><i class="fa-solid fa-trash"></i></button>
     <button class="btn btn-outline-secondary btn-sm">
       {{ showTodos ? 'Hide' : 'Show' }} Todos ▼
     </button>
@@ -24,7 +25,7 @@
         {{ todo.status ? 'Completed' : 'Pending' }}
       </span>
       <button type="button" class="btn btn-sm btn-outline-primary m-2">Edit</button>
-      <span type="button" class="btn btn-sm btn-danger"><i class="fa-solid fa-trash"></i></span>
+      <button type="button" (click)="deleteTodo(todo.id)" class="btn btn-sm btn-danger"><i class="fa-solid fa-trash"></i></button>
     </li>
   </ul>
-</div>
+</div>  
